--- a/button_testing.css
+++ b/button_testing.css
@@ -26,8 +26,11 @@
   height: 43px;
   border: none !important;
   background-color: transparent !important;
-  color: transparent;
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn.png) center no-repeat !important;
+}
+
+.page-practiceItems\.4\.0 #controls--next-button > * {
+  display: none;
 }
 
 .page-practiceItems\.4\.0 #controls--next-button:hover {
@@ -35,5 +38,5 @@
 }
 
 .page-practiceItems\.4\.0 #controls--next-button:active {
-  background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_hover.png) center no-repeat !important;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
