--- a/button_testing.css
+++ b/button_testing.css
@@ -21,12 +21,26 @@
 }
 
 .page-practiceItems\.4\.0 #controls--next-button {
-  animation: highlightOrange1 0.001s linear 15s forwards;
+  position: relative;
+  /*animation: highlightOrange1 0.001s linear 15s forwards;*/
   width: 143px;
   height: 43px;
   border: none !important;
-  background-color: transparent !important;
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn.png) center no-repeat !important;
+}
+
+.page-practiceItems\.4\.0 #controls--next-button::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_orange.png) center no-repeat;
+  pointer-events: none;
+  opacity: 0;
+  animation: revealOrange 0.2s linear 15s forwards;
+}
+
+@keyframes revealOrange {
+  to { opacity: 1; }
 }
 
 .page-practiceItems\.4\.0 #controls--next-button > * {
