--- a/button_testing.css
+++ b/button_testing.css
@@ -1,15 +1,24 @@
 @keyframes flashOrange1 {
-  0%, 100% { background:orange; color:#111; }
+  0%, 100% { background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat !important; }
 }
 
 @keyframes flashOrange2 {
-  0%, 100% { background:orange; color:#111; }
+  0%, 100% { background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat !important; }
 }
 
 @keyframes highlightOrange1 {
   to {
     background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_orange.png) center no-repeat !important;
   }
+}
+
+/* Clear style of back button, and set sizing to match image */
+.page-practiceItems\.4\.0 #controls--back-button,
+.page-practiceItems\.4\.1 #controls--back-button {
+  position: relative;
+  width: 143px;
+  height: 43px;
+  border: none !important;
 }
 
 .page-practiceItems\.4\.0 #controls--back-button {
@@ -20,15 +29,28 @@
   animation: flashOrange2 1s linear 10s;
 }
 
-.page-practiceItems\.4\.0 #controls--next-button {
+/* 
+======================================
+            NEXT BUTTON
+======================================
+*/
+
+/* Clear style of next button, and set sizing to match image */
+.page-practiceItems\.4\.0 #controls--next-button,
+.page-practiceItems\.4\.1 #controls--next-button,
+.page-practiceItems\.4\.2 #controls--next-button,
+.page-practiceItems\.4\.3 #controls--next-button {
   position: relative;
-  /*animation: highlightOrange1 0.001s linear 15s forwards;*/
   width: 143px;
   height: 43px;
   border: none !important;
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn.png) center no-repeat !important;
 }
 
+/* Setup for next button highlight */
+.page-practiceItems\.4\.0 #controls--next-button::after,
+.page-practiceItems\.4\.0 #controls--next-button::after,
+.page-practiceItems\.4\.0 #controls--next-button::after,
 .page-practiceItems\.4\.0 #controls--next-button::after {
   content: "";
   position: absolute;
@@ -36,21 +58,55 @@
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_orange.png) center no-repeat;
   pointer-events: none;
   opacity: 0;
-  animation: revealOrange 0.2s linear 15s forwards;
+  animation-delay: 15s;
+  animation-directions: forwards;
+  animation-duration: 0.2s;
+  animation-timing-function: linear;
 }
 
-@keyframes revealOrange {
-  to { opacity: 1; }
-}
-
-.page-practiceItems\.4\.0 #controls--next-button > * {
+/* Hide additional elements within the button */
+.page-practiceItems\.4\.0 #controls--next-button > *,
+.page-practiceItems\.4\.1 #controls--next-button > *,
+.page-practiceItems\.4\.2 #controls--next-button > *,
+.page-practiceItems\.4\.3 #controls--next-button > * {
   display: none;
 }
 
-.page-practiceItems\.4\.0 #controls--next-button:hover {
+/* Handle hover state */
+.page-practiceItems\.4\.0 #controls--next-button:hover,
+.page-practiceItems\.4\.0 #controls--next-button:hover::after,
+.page-practiceItems\.4\.1 #controls--next-button:hover,
+.page-practiceItems\.4\.1 #controls--next-button:hover::after,
+.page-practiceItems\.4\.2 #controls--next-button:hover,
+.page-practiceItems\.4\.2 #controls--next-button:hover::after,
+.page-practiceItems\.4\.3 #controls--next-button:hover,
+.page-practiceItems\.4\.3 #controls--next-button:hover::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_hover.png) center no-repeat !important;
 }
 
-.page-practiceItems\.4\.0 #controls--next-button:active {
+/* Handle active state */
+.page-practiceItems\.4\.0 #controls--next-button:active,
+.page-practiceItems\.4\.0 #controls--next-button:active::after,
+.page-practiceItems\.4\.1 #controls--next-button:active,
+.page-practiceItems\.4\.1 #controls--next-button:active::after,
+.page-practiceItems\.4\.2 #controls--next-button:active,
+.page-practiceItems\.4\.2 #controls--next-button:active::after,
+.page-practiceItems\.4\.3 #controls--next-button:active,
+.page-practiceItems\.4\.3 #controls--next-button:active::after,
+{
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
+
+/* Assign delay animation */
+.page-practiceItems\.4\.0 #controls--next-button::after { animation-name: revealOrange0 }
+.page-practiceItems\.4\.1 #controls--next-button::after { animation-name: revealOrange1 }
+.page-practiceItems\.4\.2 #controls--next-button::after { animation-name: revealOrange2 }
+.page-practiceItems\.4\.3 #controls--next-button::after { animation-name: revealOrange3 }
+
+/* Animations (1 for each unique page) */
+@keyframes revealOrange0 { to { opacity: 1 } }
+@keyframes revealOrange1 { to { opacity: 1 } }
+@keyframes revealOrange2 { to { opacity: 1 } }
+@keyframes revealOrange3 { to { opacity: 1 } }
+
+
