--- a/button_testing.css
+++ b/button_testing.css
@@ -1,33 +1,76 @@
-@keyframes flashOrange1 {
-  0%, 100% { background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat !important; }
-}
-
-@keyframes flashOrange2 {
-  0%, 100% { background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat !important; }
-}
-
-@keyframes highlightOrange1 {
-  to {
-    background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_orange.png) center no-repeat !important;
-  }
-}
-
 /* Clear style of back button, and set sizing to match image */
 .page-practiceItems\.4\.0 #controls--back-button,
+.page-practiceItems\.4\.1 #controls--back-button,
+.page-practiceItems\.4\.1 #controls--back-button,
 .page-practiceItems\.4\.1 #controls--back-button {
   position: relative;
-  width: 143px;
-  height: 43px;
+  width: 63px;
+  height: 63px;
   border: none !important;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn.png) center no-repeat !important;
 }
 
-.page-practiceItems\.4\.0 #controls--back-button {
-  animation: flashOrange1 1s linear 10s;
+/* Setup for sound button highlight */
+.page-practiceItems\.4\.0 #controls--back-button::after,
+.page-practiceItems\.4\.0 #controls--back-button::after,
+.page-practiceItems\.4\.0 #controls--back-button::after,
+.page-practiceItems\.4\.0 #controls--back-button::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat;
+  pointer-events: none;
+  opacity: 0;
+  animation-delay: 10s;
+  animation-duration: 1s;
+  animation-timing-function: linear;
 }
 
-.page-practiceItems\.4\.1 #controls--back-button {
-  animation: flashOrange2 1s linear 10s;
+/* Hide additional elements within the button */
+.page-practiceItems\.4\.0 #controls--back-button > *,
+.page-practiceItems\.4\.1 #controls--back-button > *,
+.page-practiceItems\.4\.2 #controls--back-button > *,
+.page-practiceItems\.4\.3 #controls--back-button > * {
+  display: none;
 }
+
+
+/* Handle hover state */
+.page-practiceItems\.4\.0 #controls--back-button:hover,
+.page-practiceItems\.4\.0 #controls--back-button:hover::after,
+.page-practiceItems\.4\.1 #controls--back-button:hover,
+.page-practiceItems\.4\.1 #controls--back-button:hover::after,
+.page-practiceItems\.4\.2 #controls--back-button:hover,
+.page-practiceItems\.4\.2 #controls--back-button:hover::after,
+.page-practiceItems\.4\.3 #controls--back-button:hover,
+.page-practiceItems\.4\.3 #controls--back-button:hover::after {
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_hover.png) center no-repeat !important;
+}
+
+/* Handle active state */
+.page-practiceItems\.4\.0 #controls--back-button:active,
+.page-practiceItems\.4\.0 #controls--back-button:active::after,
+.page-practiceItems\.4\.1 #controls--back-button:active,
+.page-practiceItems\.4\.1 #controls--back-button:active::after,
+.page-practiceItems\.4\.2 #controls--back-button:active,
+.page-practiceItems\.4\.2 #controls--back-button:active::after,
+.page-practiceItems\.4\.3 #controls--back-button:active,
+.page-practiceItems\.4\.3 #controls--back-button:active::after,
+{
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_selected.png) center no-repeat !important;
+}
+
+/* Assign delay animation */
+.page-practiceItems\.4\.0 #controls--back-button { animation-name: flashOrange0; }
+.page-practiceItems\.4\.1 #controls--back-button { animation-name: flashOrange1; }
+.page-practiceItems\.4\.2 #controls--back-button { animation-name: flashOrange2; }
+.page-practiceItems\.4\.3 #controls--back-button { animation-name: flashOrange3; }
+
+/* Animations (1 for each unique page) */
+@keyframes flashOrange0 { to { opacity: 1 } }
+@keyframes flashOrange1 { to { opacity: 1 } }
+@keyframes flashOrange2 { to { opacity: 1 } }
+@keyframes flashOrange3 { to { opacity: 1 } }
 
 /* 
 ======================================
