--- a/button_testing.css
+++ b/button_testing.css
@@ -21,9 +21,7 @@
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat;
   pointer-events: none;
   opacity: 0;
-  animation-delay: 10s;
-  animation-duration: 1s;
-  animation-timing-function: linear;
+  animation: flashOrange0 1s linear 10s;
 }
 
 /* Hide additional elements within the button */
@@ -60,8 +58,7 @@
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_selected.png) center no-repeat !important;
 }
 
-/* Assign delay animation */
-.page-practiceItems\.4\.0 #controls--back-button { animation-name: flashOrange0; }
+/* Assign additional delay animations */
 .page-practiceItems\.4\.1 #controls--back-button { animation-name: flashOrange1; }
 .page-practiceItems\.4\.2 #controls--back-button { animation-name: flashOrange2; }
 .page-practiceItems\.4\.3 #controls--back-button { animation-name: flashOrange3; }
@@ -101,10 +98,7 @@
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_orange.png) center no-repeat;
   pointer-events: none;
   opacity: 0;
-  animation-delay: 15s;
-  animation-directions: forwards;
-  animation-duration: 0.2s;
-  animation-timing-function: linear;
+  animation: revealOrange0 0.2s linear 15s forwards;
 }
 
 /* Hide additional elements within the button */
@@ -140,8 +134,7 @@
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
 
-/* Assign delay animation */
-.page-practiceItems\.4\.0 #controls--next-button::after { animation-name: revealOrange0 }
+/* Assign additional delay animations */
 .page-practiceItems\.4\.1 #controls--next-button::after { animation-name: revealOrange1 }
 .page-practiceItems\.4\.2 #controls--next-button::after { animation-name: revealOrange2 }
 .page-practiceItems\.4\.3 #controls--next-button::after { animation-name: revealOrange3 }
