--- a/button_testing.css
+++ b/button_testing.css
@@ -20,6 +20,7 @@
   position: absolute;
   inset: 0;
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat;
+  background-size: 43px !important;
   pointer-events: none;
   opacity: 0;
 }
@@ -42,6 +43,7 @@
 .page-practiceItems\.4\.3 #controls--back-button:hover,
 .page-practiceItems\.4\.3 #controls--back-button:hover::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_hover.png) center no-repeat !important;
+  background-size: 43px !important;
 }
 
 /* Handle active state */
@@ -52,16 +54,16 @@
 .page-practiceItems\.4\.2 #controls--back-button:active,
 .page-practiceItems\.4\.2 #controls--back-button:active::after,
 .page-practiceItems\.4\.3 #controls--back-button:active,
-.page-practiceItems\.4\.3 #controls--back-button:active::after,
-{
+.page-practiceItems\.4\.3 #controls--back-button:active::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_selected.png) center no-repeat !important;
+  background-size: 43px !important;
 }
 
 /* Assign additional delay animations */
 .page-practiceItems\.4\.0 #controls--back-button { animation: flashOrange0 1s linear 10s }
-.page-practiceItems\.4\.1 #controls--back-button { animation: flashOrange0 1s linear 10s }
-.page-practiceItems\.4\.2 #controls--back-button { animation: flashOrange0 1s linear 10s }
-.page-practiceItems\.4\.3 #controls--back-button { animation: flashOrange0 1s linear 10s }
+.page-practiceItems\.4\.1 #controls--back-button { animation: flashOrange1 1s linear 10s }
+.page-practiceItems\.4\.2 #controls--back-button { animation: flashOrange2 1s linear 10s }
+.page-practiceItems\.4\.3 #controls--back-button { animation: flashOrange3 1s linear 10s }
 
 /* Animations (1 for each unique page) */
 @keyframes flashOrange0 { to { opacity: 1 } }
@@ -128,8 +130,7 @@
 .page-practiceItems\.4\.2 #controls--next-button:active,
 .page-practiceItems\.4\.2 #controls--next-button:active::after,
 .page-practiceItems\.4\.3 #controls--next-button:active,
-.page-practiceItems\.4\.3 #controls--next-button:active::after,
-{
+.page-practiceItems\.4\.3 #controls--next-button:active::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
 
