--- a/button_testing.css
+++ b/button_testing.css
@@ -5,10 +5,7 @@
 */
 
 /* Clear style of back button, and set sizing to match image */
-.page-practiceItems\.4\.0 #controls--back-button,
-.page-practiceItems\.4\.1 #controls--back-button,
-.page-practiceItems\.4\.2 #controls--back-button,
-.page-practiceItems\.4\.3 #controls--back-button {
+[class^="page-practiceItems.4."] #controls--back-button {
   position: relative;
   width: 43px;
   height: 43px;
@@ -18,10 +15,7 @@
 }
 
 /* Setup for sound button highlight */
-.page-practiceItems\.4\.0 #controls--back-button::after,
-.page-practiceItems\.4\.1 #controls--back-button::after,
-.page-practiceItems\.4\.2 #controls--back-button::after,
-.page-practiceItems\.4\.3 #controls--back-button::after {
+[class^="page-practiceItems.4."] #controls--back-button::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -32,35 +26,20 @@
 }
 
 /* Hide additional elements within the button */
-.page-practiceItems\.4\.0 #controls--back-button > *,
-.page-practiceItems\.4\.1 #controls--back-button > *,
-.page-practiceItems\.4\.2 #controls--back-button > *,
-.page-practiceItems\.4\.3 #controls--back-button > * {
+[class^="page-practiceItems.4."] #controls--back-button > * {
   display: none;
 }
 
 /* Handle hover state */
-.page-practiceItems\.4\.0 #controls--back-button:hover,
-.page-practiceItems\.4\.0 #controls--back-button:hover::after,
-.page-practiceItems\.4\.1 #controls--back-button:hover,
-.page-practiceItems\.4\.1 #controls--back-button:hover::after,
-.page-practiceItems\.4\.2 #controls--back-button:hover,
-.page-practiceItems\.4\.2 #controls--back-button:hover::after,
-.page-practiceItems\.4\.3 #controls--back-button:hover,
-.page-practiceItems\.4\.3 #controls--back-button:hover::after {
+[class^="page-practiceItems.4."] #controls--back-button:hover,
+[class^="page-practiceItems.4."] #controls--back-button:hover::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_hover.png) center no-repeat !important;
   background-size: 43px !important;
 }
 
 /* Handle active state */
-.page-practiceItems\.4\.0 #controls--back-button:active,
-.page-practiceItems\.4\.0 #controls--back-button:active::after,
-.page-practiceItems\.4\.1 #controls--back-button:active,
-.page-practiceItems\.4\.1 #controls--back-button:active::after,
-.page-practiceItems\.4\.2 #controls--back-button:active,
-.page-practiceItems\.4\.2 #controls--back-button:active::after,
-.page-practiceItems\.4\.3 #controls--back-button:active,
-.page-practiceItems\.4\.3 #controls--back-button:active::after {
+[class^="page-practiceItems.4."] #controls--back-button:active,
+[class^="page-practiceItems.4."] #controls--back-button:active::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_selected.png) center no-repeat !important;
   background-size: 43px !important;
 }
@@ -84,10 +63,7 @@
 */
 
 /* Clear style of next button, and set sizing to match image */
-.page-practiceItems\.4\.0 #controls--next-button,
-.page-practiceItems\.4\.1 #controls--next-button,
-.page-practiceItems\.4\.2 #controls--next-button,
-.page-practiceItems\.4\.3 #controls--next-button {
+[class^="page-practiceItems.4."] #controls--next-button {
   position: relative;
   width: 143px;
   height: 43px;
@@ -96,10 +72,7 @@
 }
 
 /* Setup for next button highlight */
-.page-practiceItems\.4\.0 #controls--next-button::after,
-.page-practiceItems\.4\.1 #controls--next-button::after,
-.page-practiceItems\.4\.2 #controls--next-button::after,
-.page-practiceItems\.4\.3 #controls--next-button::after {
+[class^="page-practiceItems.4."] #controls--next-button::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -109,34 +82,23 @@
 }
 
 /* Hide additional elements within the button */
-.page-practiceItems\.4\.0 #controls--next-button > *,
-.page-practiceItems\.4\.1 #controls--next-button > *,
-.page-practiceItems\.4\.2 #controls--next-button > *,
-.page-practiceItems\.4\.3 #controls--next-button > * {
+[class^="page-practiceItems.4."] #controls--next-button > * {
   display: none;
 }
 
 /* Handle hover state */
-.page-practiceItems\.4\.0 #controls--next-button:hover,
-.page-practiceItems\.4\.0 #controls--next-button:hover::after,
-.page-practiceItems\.4\.1 #controls--next-button:hover,
-.page-practiceItems\.4\.1 #controls--next-button:hover::after,
-.page-practiceItems\.4\.2 #controls--next-button:hover,
-.page-practiceItems\.4\.2 #controls--next-button:hover::after,
-.page-practiceItems\.4\.3 #controls--next-button:hover,
-.page-practiceItems\.4\.3 #controls--next-button:hover::after {
+[class^="page-practiceItems.4."] #controls--next-button:hover,
+[class^="page-practiceItems.4."] #controls--next-button:hover::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_hover.png) center no-repeat !important;
 }
 
 /* Handle active state */
-.page-practiceItems\.4\.0 #controls--next-button:active,
-.page-practiceItems\.4\.0 #controls--next-button:active::after,
-.page-practiceItems\.4\.1 #controls--next-button:active,
-.page-practiceItems\.4\.1 #controls--next-button:active::after,
-.page-practiceItems\.4\.2 #controls--next-button:active,
-.page-practiceItems\.4\.2 #controls--next-button:active::after,
-.page-practiceItems\.4\.3 #controls--next-button:active,
-.page-practiceItems\.4\.3 #controls--next-button:active::after {
+[class^="page-practiceItems.4."] #controls--next-button:active,
+[class^="page-practiceItems.4."] #controls--next-button:active::after {
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
+}
+[class^="page-practiceItems.4."] #controls--next-button:active,
+[class^="page-practiceItems.4."] #controls--next-button:active::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
 
