--- a/button_testing.css
+++ b/button_testing.css
@@ -44,11 +44,16 @@
   background-size: 43px !important;
 }
 
+/* 
+  Animations and keyframes need to be unique for each page. Without unique keyframes, the animations
+  will not reset when navigating between pages, and the animation will not play again.
+*/
+
 /* Assign additional delay animations */
-.page-practiceItems\.4\.0 #controls--back-button { animation: flashOrange0 1s linear 10s }
-.page-practiceItems\.4\.1 #controls--back-button { animation: flashOrange1 1s linear 10s }
-.page-practiceItems\.4\.2 #controls--back-button { animation: flashOrange2 1s linear 10s }
-.page-practiceItems\.4\.3 #controls--back-button { animation: flashOrange3 1s linear 10s }
+.page-practiceItems\.4\.0 #controls--back-button::after { animation: flashOrange0 1s linear 10s }
+.page-practiceItems\.4\.1 #controls--back-button::after { animation: flashOrange1 1s linear 10s }
+.page-practiceItems\.4\.2 #controls--back-button::after { animation: flashOrange2 1s linear 10s }
+.page-practiceItems\.4\.3 #controls--back-button::after { animation: flashOrange3 1s linear 10s }
 
 /* Animations (1 for each unique page) */
 @keyframes flashOrange0 { 0%, 99% { opacity: 1 } }
@@ -101,6 +106,11 @@
 [class^="page-practiceItems.4."] #controls--next-button:active::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
+
+/* 
+  Animations and keyframes need to be unique for each page. Without unique keyframes, the animations
+  will not reset when navigating between pages, and the animation will not play again.
+*/
 
 /* Assign additional delay animations */
 .page-practiceItems\.4\.0 #controls--next-button::after { animation: revealOrange0 0s linear 15s forwards }
