--- a/button_testing.css
+++ b/button_testing.css
@@ -1,8 +1,23 @@
-/* 
-======================================
-        BACK BUTTON (Audio)
-======================================
+/*
+  NOTES:
+
+  - Animations and keyframes need to be unique for each page. Without unique keyframes, the animations
+    will not reset when navigating between pages, and the animation will not play again.
 */
+
+/* =======================================
+          Common Button Styles 
+======================================= */
+
+/* Hide additional elements within the button (Text and Arrow) */
+[class^="page-practiceItems.4."] #controls--back-button > *,
+[class^="page-practiceItems.4."] #controls--next-button > * {
+  display: none;
+}
+
+/* ======================================
+          BACK BUTTON (Audio)
+====================================== */
 
 /* Clear style of back button, and set sizing to match image */
 [class^="page-practiceItems.4."] #controls--back-button {
@@ -10,8 +25,7 @@
   width: 43px;
   height: 43px;
   border: none !important;
-  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn.png) center no-repeat !important;
-  background-size: 43px !important;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn.png) center / 43px no-repeat !important;
 }
 
 /* Setup for sound button highlight */
@@ -19,53 +33,42 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center no-repeat;
-  background-size: 43px !important;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_orange.png) center / 43px no-repeat !important;
   pointer-events: none;
   opacity: 0;
 }
 
-/* Hide additional elements within the button (Text and Arrow) */
-[class^="page-practiceItems.4."] #controls--back-button > * {
-  display: none;
-}
 
 /* Handle hover state */
 [class^="page-practiceItems.4."] #controls--back-button:hover,
 [class^="page-practiceItems.4."] #controls--back-button:hover::after {
-  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_hover.png) center no-repeat !important;
-  background-size: 43px !important;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_hover.png) center / 43px no-repeat !important;
 }
 
 /* Handle active state */
 [class^="page-practiceItems.4."] #controls--back-button:active,
 [class^="page-practiceItems.4."] #controls--back-button:active::after {
-  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_selected.png) center no-repeat !important;
-  background-size: 43px !important;
+  background: url(https://mhsmatt.github.io/styles/images/pvat_item_sound_btn_selected.png) center / 43px no-repeat !important;
 }
 
-/* 
-  Animations and keyframes need to be unique for each page. Without unique keyframes, the animations
-  will not reset when navigating between pages, and the animation will not play again.
-*/
+@keyframes flashOrange { 0%, 99% { opacity: 1 } }
+[class^="page-practiceItems"] #controls--back-button::after { animation: flashOrange 1s linear 10s }
 
 /* Assign additional delay animations */
-.page-practiceItems\.4\.0 #controls--back-button::after { animation: flashOrange0 1s linear 10s }
+/* .page-practiceItems\.4\.0 #controls--back-button::after { animation: flashOrange0 1s linear 10s }
 .page-practiceItems\.4\.1 #controls--back-button::after { animation: flashOrange1 1s linear 10s }
 .page-practiceItems\.4\.2 #controls--back-button::after { animation: flashOrange2 1s linear 10s }
-.page-practiceItems\.4\.3 #controls--back-button::after { animation: flashOrange3 1s linear 10s }
+.page-practiceItems\.4\.3 #controls--back-button::after { animation: flashOrange3 1s linear 10s } */
 
 /* Animations (1 for each unique page) */
-@keyframes flashOrange0 { 0%, 99% { opacity: 1 } }
+/* @keyframes flashOrange0 { 0%, 99% { opacity: 1 } }
 @keyframes flashOrange1 { 0%, 99% { opacity: 1 } }
 @keyframes flashOrange2 { 0%, 99% { opacity: 1 } }
-@keyframes flashOrange3 { 0%, 99% { opacity: 1 } }
+@keyframes flashOrange3 { 0%, 99% { opacity: 1 } } */
 
-/* 
-======================================
-            NEXT BUTTON
-======================================
-*/
+/* ======================================
+              NEXT BUTTON
+====================================== */
 
 /* Clear style of next button, and set sizing to match image */
 [class^="page-practiceItems.4."] #controls--next-button {
@@ -86,11 +89,6 @@
   opacity: 0;
 }
 
-/* Hide additional elements within the button (Text and Arrow) */
-[class^="page-practiceItems.4."] #controls--next-button > * {
-  display: none;
-}
-
 /* Handle hover state */
 [class^="page-practiceItems.4."] #controls--next-button:hover,
 [class^="page-practiceItems.4."] #controls--next-button:hover::after {
@@ -106,11 +104,6 @@
 [class^="page-practiceItems.4."] #controls--next-button:active::after {
   background: url(https://mhsmatt.github.io/styles/images/pvat_item_next_btn_selected.png) center no-repeat !important;
 }
-
-/* 
-  Animations and keyframes need to be unique for each page. Without unique keyframes, the animations
-  will not reset when navigating between pages, and the animation will not play again.
-*/
 
 /* Assign additional delay animations */
 .page-practiceItems\.4\.0 #controls--next-button::after { animation: revealOrange0 0s linear 15s forwards }
