--- a/button_testing.css
+++ b/button_testing.css
@@ -77,12 +77,12 @@ body::before {
 .page-practiceItems\.4\.3 #controls--back-button::after { animation: flashOrange3 1s linear 10s }
 .page-practiceItems\.4\.4 #controls--back-button::after { animation: flashOrange4 1s linear 10s }
 
-/* Animations (1 for each unique page) */
-@keyframes flashOrange0 { to { opacity: 1 } }
-@keyframes flashOrange1 { to { opacity: 1 } }
-@keyframes flashOrange2 { to { opacity: 1 } }
-@keyframes flashOrange3 { to { opacity: 1 } }
-@keyframes flashOrange4 { to { opacity: 1 } }
+/* Animations (1 for each unique page). Percentages are used to eliminate smooth transitions. */
+@keyframes flashOrange0 { 0%, 99% { opacity: 1 } }
+@keyframes flashOrange1 { 0%, 99% { opacity: 1 } }
+@keyframes flashOrange2 { 0%, 99% { opacity: 1 } }
+@keyframes flashOrange3 { 0%, 99% { opacity: 1 } }
+@keyframes flashOrange4 { 0%, 99% { opacity: 1 } }
 
 /* ======================================
               NEXT BUTTON
